grammar.js
    source_file: $ => optional(choice(
      $.cs_legacy_file,
      $.csd_file
    )),

    cs_legacy_file: $ => seq(
      optional(alias($.preprocessor_directive, 'cs_common_instructions')),
      choice(
        seq(
          alias($.score_file, 'cs_score'),
          alias($.udo_file, 'cs_udo'),
        ),
        alias($.score_file, 'cs_score'),
        alias($.orchestra_file, 'cs_orchestra')
      )
    ),

    orchestra_file: $ => repeat1($.orchestra_statement),

    _statement: $ => choice(
      $.typed_assignment_statement,
      $.assignment_statement,
      $.legacy_typed_assignment_statement,
      $.function_call,
      $.opcode_statement,
      $.label_statement,
      $.control_statement,
      $.rigoto_statement,
      $.struct_definition,
      $.macro_usage,
      $.return_statement,
      $.xin_statement,
      $.xout_statement,
      $.preprocessor_directive
    ),

    _lvalue: $ => choice(
      $.global_typed_identifier,
      $.header_identifier,
      $.typed_identifier,
      $.array_access,
      $.struct_access,
      $.identifier,
      $.pfield
    ),

    _expression: $ => choice(
      $.array_access,
      $.function_call,
      $.internal_raw_block,
      $.unary_expression,
      $.binary_expression,
      $.ternary_expression,
      $.parenthesized_expression,
      $.header_identifier,
      alias($.header_0dbfs, $.header_identifier),
      $.number,
      $.boolean_var,
      $.string,
      alias(choice(
        $.identifier,
        $.type_identifier_legacy,
      ), $.identifier),
      $.typed_opcode_name,
      // $.typed_identifier,
      $.struct_access,
      $.macro_usage,
      $.array_data,
      $.pfield,
      // $.slicing_dots
    ),

    control_statement: $ => choice(
      $.if_statement,
      $.while_loop,
      $.until_loop,
      $.for_loop,
      $.switch_statement,
      $.goto_statement,
    ),

    orchestra_statement: $ => choice(
      $.header_assignment,
      $.instrument_definition,
      $.udo_definition,
      $._statement
    ),

    preprocessor_directive: $ => choice(
      $.macro_define,
      $.include_directive,
      $.undef_directive,
      $.ifdef_directive
    ),

    argument_list: $ => seq(
      $._expression,
      repeat(seq(',', $._expression))
    ),

    included_file: $ => choice($.string, seq('<', /[^>]*/, '>')),
    include_directive: $ => seq(
      choice(
        $.kw_include,
        $.kw_includestr
      ),
      field('included_file', $.included_file),
    ),

    macro_name: $ => seq(
      field('id', $.identifier),
      optional(field('macro_args', $.macro_args))
    ),

    macro_value: $ => token(
      repeat(choice(
        /[^#\\]/,
        /\\./
      ))
    ),

    macro_define: $ => prec(10, seq(
      $.kw_define,
      field('macro_name', $.macro_name),
      '#',
      optional(field('macro_values', $.macro_value)),
      '#'
    )),

    macro_usage: $ => seq(
      field('macro_symbol', '$'),
      field('id', $.identifier),
      optional('.'),
      optional(seq(
        '(',
        sep1(choice(
          $.number,
          $.string,
          $.identifier
        ),
          '\''),
        ')'
      ))
    ),

    csd_file: $ => seq(
      optional(repeat($.cabbage_block)),
      $.tag_synthesizer_start,
      repeat($.csd_element),
      $.tag_synthesizer_end,
    ),

    csd_element: $ => choice(
      $.optional_tag_block,
      $.options_block,
      $.instruments_block,
      $.score_block
    ),

    cabbage_json_block: $ => seq(
      '{',
      repeat(choice(
        $.strong_string,
        $.json_punctuation,
        $.cabbage_json_block,
        $.json_atom
      )),
      '}'
    ),

    strong_string: $ => token(prec(5, seq(
      '"',
      repeat(choice(
        /[^"\\]+/,
        /\\./
      )),
      '"'
    ))),

    json_punctuation: $ => token(prec(2, choice(',', ':', '[', ']'))),

    json_atom: $ => token(prec(1, choice(
        /-?\d+(\.\d+)?([eE][+-]?\d+)?/,
        'true', 'false', 'null'
    ))),

    // --- END CABBAGE SECTION ---

    // --- OPTIONAL TAG ---

    flag_content: $ => choice(
      // short option: a single character, with the value attached or separated
      // (-odac, -o dac, -b1024)
      seq(
        alias($._flag_short_prefix, $.flag_identifier),
        optional(field('flag_type', alias($._flag_short_type, $.flag_type))),
        optional(field('flag_value', $._flag_value))
      ),
      // long option: --nodisplays, --limiter=.95, -+rtaudio=jack
      seq(
        alias($._flag_long_prefix, $.flag_identifier),
        optional(field('flag_type', $.flag_type)),
        optional('='),
        optional(field('flag_value', $._flag_value))
      )
    ),

    _flag_value: $ => choice(
      $.string,
      $.number,
      alias($._flag_raw_value, $.identifier)
    ),

    options_block: $ => seq(
      $.tag_options_start,
      repeat($.flag_content),
      $.tag_options_end,
      $._new_line
    ),

    // --- END OPTIONS BLOCK ---

    // --- ORCHESTRA BLOCK ---

    instruments_block: $ => seq(
      $.tag_instruments_start,
      optional($.orchestra_file),
      $.tag_instruments_end,
      $._new_line
    ),

    cabbage_block: $ => seq(
      choice($.tag_cabbage_start, $.tag_cabbageara_start),
      optional($.cabbage_json_block),
      choice($.tag_cabbage_end, $.tag_cabbageara_end),
      $._new_line
    ),

    header_assignment: $ => seq(
      choice(
        $.header_identifier,
        alias($.header_0dbfs, $.header_identifier)
      ),
      '=',
      $._expression
    ),

    instrument_definition: $ => prec(7, seq(
      field('instr', 'instr'),
      field('name', prec.left(sep1(
        choice(
          $.identifier,
          $.number,
          $.plus_identifier
        ),
        ','
      ))),
      optional($._new_line),
      repeat($._statement),
      choice(
        'endin',
        $.instr_udo_bounded_error
      )
    )),

    udo_definition: $ => choice(
      $.udo_definition_legacy,
      $.udo_definition_modern
    ),

    udo_definition_legacy: $ => seq(
      'opcode',
      field('name', $.opcode_name),
      ',',
      field('outputs', $.legacy_udo_args),
      ',',
      field('inputs', $.legacy_udo_args),
      field('udo_body', repeat($._statement)),
      choice(
        'endop',
        $.instr_udo_bounded_error
      )
    ),

    udo_definition_modern: $ => seq(
      'opcode',
      field('name', $.opcode_name),
      field('inputs', $.modern_udo_inputs),
      ':',
      field('outputs', $.modern_udo_outputs),
      field('udo_body', repeat($._statement)),
      choice(
        'endop',
        $.instr_udo_bounded_error
      )
    ),

    modern_udo_inputs: $ => seq(
      '(',
      optional(sep1(
        choice(
          $.typed_identifier,
          $.type_identifier_legacy, // add also in grammar poss
          $.identifier
        ),
        ',')),
      ')'
    ),

    modern_udo_outputs: $ => choice(
      seq(
        optional('('),
        $.legacy_udo_args,
        optional(')')
      ),
      $.kw_void
    ),

    xin_statement: $ => prec.dynamic(10, prec(5, seq( // todo add typed identifier possibilty
      field('outputs', sep1(
        choice(
          $.type_identifier_legacy,
          $.typed_identifier
          ), ',')
      ),
      $.kw_xin,
    ))),

    xout_statement: $ => seq(
      $.kw_xout,
      field('inputs', choice(
        $.parenthesized_expression,
        $.argument_list
      )),
    ),

    typed_assignment_statement: $ => prec.dynamic(5, prec(2, seq(
      // at least one typed target; legacy-typed targets may be mixed in
      field('left', seq(
        repeat(seq($.type_identifier_legacy, ',')),
        choice($.typed_identifier, $.global_typed_identifier),
        repeat(seq(',', choice($.typed_identifier, $.global_typed_identifier, $.type_identifier_legacy)))
      )),
      field('operator', choice('=', '+=', '-=', '*=', '/=', $.mod_equal)),
      field('right', $.argument_list)
    ))),

    assignment_statement: $ => prec.dynamic(5, seq(
      field('left', sep1($._lvalue, ',')),
      field('operator', choice('=', '+=', '-=', '*=', '/=', $.mod_equal)),
      field('right', $.argument_list)
    )),

    legacy_typed_assignment_statement: $ => prec.dynamic(5, prec(3, seq(
      field('left', sep1($.type_identifier_legacy, ',')),
      field('operator', choice('=', '+=', '-=', '*=', '/=', $.mod_equal)),
      field('right', $.argument_list)
    ))),

    opcode_statement: $ => seq(
      choice(
        prec.dynamic(3, prec.right(seq(
          field('outputs', sep1(
            choice(
              $.typed_identifier,
              $.type_identifier_legacy,
              $.array_access,
              $.struct_access,
              $.global_typed_identifier,
              $.pfield
            ),
            ','
          )),
          choice(
            seq(
              field('op', $.opcode_name),
              field('inputs', optional($.argument_list))
            ),
            field('op_macro', $.macro_usage)
          )
        ))),
        prec.dynamic(2, prec(2, seq(
          field('op', $.opcode_name),
          field('inputs', $.argument_list))
        )),
        prec.dynamic(1, prec.right(seq(
          field('outputs', sep1(
            $.identifier,
            ','
          )),
          choice(
            seq(
              field('op', $.opcode_name),
              field('inputs', optional($.argument_list))
            ),
            field('op_macro', $.macro_usage)
          )
        ))),
        prec.dynamic(1, prec(0, seq(
          field('op', $.opcode_name),
        )))
      ),
      $._new_line
    ),

    typed_identifier: $ => prec(5,
      seq(
        field('name', alias(choice($.identifier, $.type_identifier_legacy), $.identifier)),
        ':',
        field('type', choice($.type_identifier, $.identifier))
      )
    ),

    opcode_name: $ => choice(
      field('opcode_typed_name', $.typed_opcode_name),
      alias(choice($.type_identifier_legacy, $.identifier), 'opcode_name')
    ),

    binary_expression: $ => choice(
      prec.left(10, seq($._expression, $.slicing_dots, $._expression)),
      prec.right(9, seq($._expression, '^', $._expression)),
      prec.left(8, seq($._expression, choice('*', '/', '%'), $._expression)),
      prec.left(7, seq($._expression, choice('+', '-'), $._expression)),
      prec.left(6, seq($._expression, choice('<<', '>>'), $._expression)),
      prec.left(5, seq($._expression, choice('<', '>', '<=', '>=', '==', '!=', '='), $._expression)),
      prec.left(4, seq($._expression, '&', $._expression)),
      prec.left(3, seq($._expression, choice('|', '#'), $._expression)),
      prec.left(2, seq($._expression, '&&', $._expression)),
      prec.left(1, seq($._expression, '||', $._expression))
    ),

    // --- END ORCHESTA SECTION ---

    // --- CONTROL SECTION ---

    control_loop_body: $ => choice(
      $._statement,
      $.break_statement,
      $.continue_statement
    ),

    until_loop: $ => prec.left(1, seq(
      $.kw_until,
      $._expression,
      $.kw_do,
      repeat($.control_loop_body),
      choice(
        $.kw_od,
        $.control_statement_bounded_error
      )
    )),

    case_header: $ => seq(
      $.kw_case_key,
      sep1($._expression, ','),
    ),

    default_header: $ => $.kw_default_key,

    switch_statement: $ => prec.left(1, seq(
      $.kw_switch_start,
      $._expression,
      repeat($.case_block),
      optional($.default_block),
      choice(
        $.kw_switch_end,
        $.control_statement_bounded_error
      )
    )),

    case_block: $ => prec.left(1, seq(
      field('case_header', $.case_header),
      field('case_body', repeat($._statement))
    )),

    default_block: $ => prec.left(1, seq(
      field('default_header', $.default_header),
      field('default_body', repeat($._statement))
    )),

    function_call: $ => prec(10,
      seq(
        field('function', $.opcode_name),
        '(',
        optional(field('inputs', $.argument_list)),
        ')'
      )
    ),

    ifdef_directive: $ => seq(
      choice(
        $.kw_ifdef,
        $.kw_ifndef
      ),
      $.identifier,
      repeat($._statement),
      optional(seq(
        $.kw_elsedef,
        repeat($._statement)
      )),
      $.kw_end
    ),

    // --- END CONTROL SECTION ---

    // --- SCORE SECTION ---

    score_unary_expression: $ => prec.left(7, seq(
      choice(
        '-',
        '@',
        '@@'
      ),
      $._score_expression
    )),

    _score_block: $ => seq(
      $.tag_score_start,
      // optional($._new_line),
      field('content', repeat(seq(
        $._score_item,
        $._new_line
      ))),
      $.tag_score_end,
      optional($._new_line)
    ),

    score_block: $ => choice(
      $._score_block,
      $._score_script_block
    ),

    _score_script_block: $ => choice(
      $.python_block,
      $.csbeats_block
    ),

    _score_expression: $ => choice(
      $.score_unary_expression,
      $.score_binary_expression,
      $.parenthesized_score_expression,
      $.score_operation,
      $.number,
      $.string,
      $.macro_usage,
      $.score_random_operator,
      $.score_carry,
      $.score_plus,
      $.score_plus_p,
      $.score_minus_p,
      $.score_exclamation,
      $.score_ramping,
      $.score_np,
      $.score_pp,
      $.group_p1_safe,
      $.score_statement_safe,
      $.score_z_operator
    ),

    _score_statement_instr: $ => seq(
      field('start_time', $._score_expression),
      field('duration', $._score_expression),
      field('pfield', repeat($._score_expression)),
    ),

    score_statement: $ => prec(5, seq(
      field('statement', choice(
        $.score_statement_group,
        alias($._score_statement_bare, $.score_statement_group),
        $.group_p1,
        alias($._score_group_p1_bare, $.group_p1),
        $.macro_usage
      )),
      field('pfield', repeat($._score_expression)),
      optional($.score_line_error)
    )),

    score_statement_wm: $ => prec(5, choice(
      seq(
        field('statement', choice(
          $.score_statement_with_macro,
          $.swmacro_p1,
          alias($._score_swmacro_p1_bare, $.swmacro_p1)
        )),
        optional(field('pfield', $._score_expression)),
        optional(seq(
          field('macro_identifier', $.identifier),
          optional(field('pfield', repeat($._score_expression))),
        )),
        optional($.score_line_error)
      ),
      seq(
        field('statement', $.macro_usage),
        optional(field('pfield', $._score_expression)),
        field('macro_identifier', $.identifier),
        optional(field('pfield', repeat($._score_expression))),
        optional($.score_line_error)
      )
    )),

    score_statement_instr: $ => prec(10, seq(
      choice(
        seq(
          field('statement', $.score_statement_i),
          field('instr', choice($.number, $.string))
        ),
        seq(
          field('statement', alias($._score_statement_i_quoted, $.score_statement_i)),
          field('instr', $.string)
        ),
        field('statement_instr', $.instr_p1),
        field('statement_macro_instr', $.macro_usage),
      ),
      choice(
        $._score_statement_instr,
        $.score_line_error
      ),
    )),

    kw_xin:                     $ => token('xin'),
    kw_xout:                    $ => token('xout'),
    kw_include:                 $ => token(prec(5, '#include')),
    kw_define :                 $ => token(prec(5, '#define')),
    kw_ifdef:                   $ => token(prec(5, '#ifdef')),
    kw_end:                     $ => token(prec(5, '#end')),
    pfield:                     $ => token(prec(5, /p[0-9]+/)),
    legacy_udo_args:            $ => token(/[a-zA-Z0-9_\[\]]+/),
    identifier:                 $ => /[a-zA-Z_]\w*/,
    score_plus:                 $ => token(prec(5, '+')),
    _flag_short_prefix:         $ => token(prec(5, '-')),
